feat(docker): added a github docker release process

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -15,7 +15,8 @@
         "assets": [
           "CHANGELOG.md",
           "README.md"
-        ]
+        ],
+        "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
       }
     ],
     "@semantic-release/github"
