feat(project): added semantic-release-helm release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,6 +10,12 @@
       }
     ],
     [
+      "semantic-release-helm",
+      {
+        "chartPath": "./charts/kubevis"
+      }
+    ],
+    [
       "@semantic-release/git",
       {
         "assets": [
